--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-#background{
-    background-color: aqua;
+
+p{
+    color: blanchedalmond;
+}
+canvas{
+    display: flex;
+    position: absolute;
+    z-index: -1;
 }
