--- a/style.css
+++ b/style.css
@@ -1,9 +1,132 @@
-
-p{
-    color: blanchedalmond;
+/* Variable */
+:root{
+    --primary-color: #FFF2F1;
+    --size-paragraph: 1.3rem;
 }
+
+/* Generic class */
+.d-flex{
+    display: flex;
+}
+
+.jc-between{
+    justify-content: space-between;
+}
+
+.jc-center{
+    justify-content: center;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.column{
+    flex-direction: column;
+}
+
+.margin-none{
+    margin: 0;
+}
+
+/* Detail ajust */
+body{
+    color: var(--primary-color);
+    width: 100vw;
+    box-sizing: border-box;
+}
+
 canvas{
     display: flex;
     position: absolute;
     z-index: -1;
+}
+
+a{
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+header{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 30px 30px 0px;
+}
+
+header > p{
+    font-size: var(--size-paragraph);
+}
+
+header > div > div:first-child > p:first-child{
+    margin: 0 2rem 0 0;
+}
+
+header > div > div:first-child > p:nth-child(2){
+    margin: 0 2.5rem 0 0;
+}
+
+/* Burger */
+.burger{
+    width: 40px;
+    height: 25px;
+    cursor: pointer;
+    position: relative;
+}
+
+.burger > span{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+
+.burger > span::before, .burger > span::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: var(--primary-color);
+	transition: transform .5s ease-in-out;
+}
+
+.burger > span::after{
+	transform: translateY(20px);
+}
+
+.burger.active > span::before{
+    transform: translateY(10px) rotate(45deg);
+}
+
+.burger.active > span::after{
+    transform: translateY(10px) rotate(-45deg);
+}
+
+/* NavLink */
+nav{
+    background: linear-gradient(45deg, rgba(45,163,180,1) 0%, rgba(66,53,103,1) 50%, rgba(0,0,0,1) 100%);
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+    transition: transform 1s ease-in-out;
+
+}
+
+nav.active{
+    transform: translateX(-100%);
+}
+
+nav > ul{
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+nav > ul > li{
+    font-size: 5.5rem;
+    line-height: 1.7;
 }
