--- a/css/style.css
+++ b/css/style.css
@@ -176,11 +176,21 @@ nav > ul > li {
 }
 
 .illustration-content {
+  display: block;
   margin-right: 10%;
   width: 100%;
-  max-width: calc(50% -10%);
+  max-width: calc(50% - 10%);
   position: relative;
   z-index: -1;
+  height: 75vh;
+}
+.illustration-content p {
+  width: 100%;
+  height: 100%;
+}
+.illustration-content p img {
+  width: 100%;
+  height: 100%;
 }
 
 .rotate-c {
