--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,18 @@ header > p {
   font-size: var(--size-paragraph);
 }
 
-header > div > div:first-child > p:first-child {
-  margin: 0 2rem 0 0;
+header > p > a {
+  transition: 0.5s;
 }
 
-header > div > div:first-child > p:nth-child(2) {
+header > p:hover > a {
+  color: #707070;
+}
+
+.social-links p:first-of-type {
+  margin: 0 2rem 0 0;
+}
+.social-links p:nth-of-type(2) {
   margin: 0 2.5rem 0 0;
 }
 
@@ -133,6 +140,25 @@ nav > ul > li {
   line-height: 1.7;
 }
 
+nav > ul > li > a {
+  position: relative;
+}
+
+nav > ul > li > a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 200vh;
+  width: 100%;
+  height: 5px;
+  background-color: var(--primary-color);
+  transition: transform 1s ease-in-out;
+}
+
+nav > ul > li > a:hover::after {
+  transform: translateX(-200vh);
+}
+
 #breadcrumbs {
   position: fixed;
   right: 0;
@@ -191,6 +217,20 @@ nav > ul > li {
 .illustration-content p img {
   width: 100%;
   height: 100%;
+}
+
+.btn {
+  margin-top: 40px;
+}
+.btn a {
+  background-color: #E76F51;
+  border-radius: 20px;
+  padding: 13px 25px;
+  transition: 0.5s;
+}
+
+.btn:hover a {
+  background-color: #924431;
 }
 
 .rotate-c {
