--- a/css/style.scss
+++ b/css/style.scss
@@ -65,12 +65,21 @@ header > p{
     font-size: var(--size-paragraph);
 }
 
-header > div > div:first-child > p:first-child{
-    margin: 0 2rem 0 0;
+header > p > a{
+    transition: .5s;
 }
 
-header > div > div:first-child > p:nth-child(2){
-    margin: 0 2.5rem 0 0;
+header > p:hover > a{
+    color: #707070;
+}
+
+.social-links{
+    p:first-of-type{
+        margin: 0 2rem 0 0;
+    }
+    p:nth-of-type(2){
+        margin: 0 2.5rem 0 0;
+    }
 }
 
 /* Burger */
@@ -133,6 +142,25 @@ nav > ul{
 nav > ul > li{
     font-size: 5.5rem;
     line-height: 1.7;
+}
+
+nav > ul > li > a{
+    position: relative;
+}
+
+nav > ul > li > a::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 200vh;
+    width: 100%;
+    height: 5px;
+    background-color: var(--primary-color);
+    transition: transform 1s ease-in-out;
+}
+
+nav > ul > li > a:hover::after{
+    transform: translateX(-200vh);
 }
 
 // breadcrumbs
@@ -201,6 +229,22 @@ nav > ul > li{
             width: 100%;
             height: 100%;
         }
+    }
+}
+
+.btn{
+    margin-top: 40px;    
+    a{
+        background-color: #E76F51;
+        border-radius: 20px;
+        padding: 13px 25px;
+        transition: .5s;
+    }
+}
+
+.btn:hover{
+    a{
+        background-color: rgb(146, 68, 49);
     }
 }
 
