Update - change all color

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Variable */
 :root {
   --primary-color: #FFF2F1;
+  --secondary-color: #80FFE8;
   --size-paragraph: 1.3rem;
   --size-title: 6rem;
 }
@@ -70,7 +71,7 @@ header > p > a {
 }
 
 header > p:hover > a {
-  color: #707070;
+  color: var(--secondary-color);
 }
 
 .social-links p:first-of-type {
@@ -193,12 +194,16 @@ nav > ul > li > a:hover::after {
   margin: 3rem 0;
   width: 85px;
   height: 13px;
-  background-color: #E76F51;
+  background-color: var(--secondary-color);
   transform: rotate(-45deg);
   border-radius: 7px;
 }
 .content-section p {
   font-size: var(--size-paragraph);
+}
+.content-section p a:hover {
+  color: var(--secondary-color);
+  transition: 0.5s;
 }
 
 .illustration-content {
@@ -223,14 +228,15 @@ nav > ul > li > a:hover::after {
   margin-top: 40px;
 }
 .btn a {
-  background-color: #E76F51;
+  background-color: var(--secondary-color);
   border-radius: 20px;
   padding: 13px 25px;
   transition: 0.5s;
+  color: #28203f;
 }
 
 .btn:hover a {
-  background-color: #924431;
+  background-color: rgba(128, 222, 217, 0.747);
 }
 
 .rotate-c {
@@ -271,71 +277,6 @@ nav > ul > li > a:hover::after {
   }
   100% {
     transform: rotate(360deg) scale(0.95) translate3d(0, 10px, 0);
-  }
-}
-.window {
-  height: 400px;
-  width: 200px;
-  position: absolute;
-  top: 50px;
-  left: 300px;
-  filter: brightness(0.3);
-  transition: filter 300ms ease-out;
-  animation: 3s infinite move-window linear;
-}
-
-.window::before {
-  margin: 0 auto;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 400px;
-  width: 200px;
-  background-image: url(https://i.ndtvimg.com/i/2017-12/plane-window-view-pixabay-650_650x400_71512105946.jpg?output-quality=70&output-format=webp);
-  background-position: center center;
-  filter: grayscale(100%);
-  border-radius: 35%;
-}
-
-.window-inside {
-  position: relative;
-  height: 100%;
-  border-radius: 35%;
-}
-
-.rain {
-  z-index: 200;
-  position: absolute;
-  top: 100px;
-  left: -100px;
-  height: 200px;
-  width: 400px;
-  border-radius: 35%;
-  transform: rotate(-90deg);
-  background-image: url(https://media.giphy.com/media/K9AnZe1fuZb68/giphy.gif);
-}
-
-@keyframes move-window {
-  0% {
-    left: 297px;
-    top: 50px;
-  }
-  25% {
-    left: 303px;
-    top: 52px;
-  }
-  50% {
-    left: 303px;
-    top: 50px;
-  }
-  75% {
-    left: 297px;
-    top: 52px;
-  }
-  100% {
-    left: 297px;
-    top: 50px;
   }
 }
 
