--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@charset "UTF-8";
+@font-face {
+  font-family: "Conv_Bazar";
+  src: url("../fonts/Bazar.eot");
+  src: local("☺"), url("../fonts/Bazar.woff") format("woff"), url("../fonts/Bazar.ttf") format("truetype"), url("../fonts/Bazar.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 /* Variable */
 :root {
   --primary-color: #FFF2F1;
@@ -36,6 +44,8 @@ body {
   color: var(--primary-color);
   width: 100vw;
   box-sizing: border-box;
+  font-family: "Conv_Bazar";
+  text-transform: uppercase;
 }
 
 canvas {
@@ -148,7 +158,7 @@ nav > ul > li > a {
 nav > ul > li > a::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   left: 200vh;
   width: 100%;
   height: 5px;
@@ -200,6 +210,7 @@ nav > ul > li > a:hover::after {
 }
 .content-section p {
   font-size: var(--size-paragraph);
+  line-height: 2rem;
 }
 .content-section p a:hover {
   color: var(--secondary-color);
