--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,13 @@
+// Fonts
+@font-face {
+	font-family: 'Conv_Bazar';
+	src: url('../fonts/Bazar.eot');
+	src: local('☺'), url('../fonts/Bazar.woff') format('woff'), url('../fonts/Bazar.ttf') format('truetype'), url('../fonts/Bazar.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
 /* Variable */
 :root{
     --primary-color: #FFF2F1;
@@ -36,6 +46,8 @@ body{
     color: var(--primary-color);
     width: 100vw;
     box-sizing: border-box;
+    font-family: 'Conv_Bazar';
+    text-transform: uppercase;
 }
 
 canvas{
@@ -152,7 +164,7 @@ nav > ul > li > a{
 nav > ul > li > a::after{
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     left: 200vh;
     width: 100%;
     height: 5px;
@@ -210,6 +222,7 @@ nav > ul > li > a:hover::after{
 
     p{
         font-size: var(--size-paragraph);
+        line-height: 2rem;
 
         a:hover{
             color: var(--secondary-color);
