--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ nav > ul > li > a:hover::after {
   transform: translateX(-200vh);
 }
 
+.short-media {
+  display: none;
+}
+
 #breadcrumbs {
   position: fixed;
   right: 0;
@@ -211,10 +215,15 @@ nav > ul > li > a:hover::after {
 .content-section p {
   font-size: var(--size-paragraph);
   line-height: 2rem;
+  margin-top: 0;
 }
 .content-section p a:hover {
   color: var(--secondary-color);
   transition: 0.5s;
+}
+
+.separate {
+  margin: 20px 0;
 }
 
 .right {
@@ -270,8 +279,8 @@ nav > ul > li > a:hover::after {
   margin: auto;
   border-radius: 999px;
   background-color: #eee;
-  -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000;
+  backface-visibility: hidden;
+  perspective: 1000;
   animation: spin-bob 2.5s linear infinite;
   box-shadow: 0 0 100px 0 rgba(255, 255, 255, 0.4);
 }
@@ -297,6 +306,81 @@ nav > ul > li > a:hover::after {
   }
   100% {
     transform: rotate(360deg) scale(0.95) translate3d(0, 10px, 0);
+  }
+}
+@media (max-width: 1199.98px) {
+  :root {
+    --size-title: 5rem;
+  }
+
+  .content-section {
+    margin-left: 5%;
+    max-width: calc(50% - 10%);
+  }
+
+  .right {
+    margin-right: 5%;
+  }
+}
+@media (max-width: 777.98px) {
+  .media-min .content-section {
+    margin: 0 15px 0;
+  }
+  .media-min .content-section h2 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 767.98px) {
+  .content-section {
+    max-width: 100%;
+    margin: 0 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .illustration-content {
+    display: none;
+  }
+
+  .media-min .content-section h2 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 575.98px) {
+  :root {
+    --size-title: 3rem;
+    --size-paragraph: .9rem;
+  }
+
+  .large-media {
+    display: none;
+  }
+
+  .short-media {
+    display: flex;
+  }
+  .short-media p:first-of-type {
+    margin: 10px;
+  }
+  .short-media p:nth-of-type(2) {
+    margin: 10px;
+  }
+
+  .media-min {
+    flex-wrap: wrap;
+  }
+  .media-min .content-section {
+    margin: 20px;
+  }
+  .media-min .content-section h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  .media-min .content-section .separate {
+    display: none;
   }
 }
 
