--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,11 @@ nav > ul > li > a:hover::after {
 .illustration-content p {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .illustration-content p img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .btn {
@@ -302,9 +303,6 @@ nav > ul > li > a:hover::after {
   }
 }
 @media (max-width: 777.98px) {
-  .media-min .content-section {
-    margin: 0 15px 0;
-  }
   .media-min .content-section h2 {
     font-size: 4rem;
   }
@@ -324,8 +322,27 @@ nav > ul > li > a:hover::after {
     display: none;
   }
 
+  .media-min {
+    flex-wrap: wrap;
+  }
+  .media-min .content-section {
+    margin: 20px;
+  }
   .media-min .content-section h2 {
-    font-size: 4rem;
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  .media-min .content-section .separate {
+    display: none;
+  }
+  .media-min .short-media {
+    display: flex;
+  }
+  .media-min .short-media p:first-of-type {
+    margin: 10px;
+  }
+  .media-min .short-media p:nth-of-type(2) {
+    margin: 10px;
   }
 }
 @media (max-width: 575.98px) {
@@ -346,20 +363,6 @@ nav > ul > li > a:hover::after {
   }
   .short-media p:nth-of-type(2) {
     margin: 10px;
-  }
-
-  .media-min {
-    flex-wrap: wrap;
-  }
-  .media-min .content-section {
-    margin: 20px;
-  }
-  .media-min .content-section h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-  .media-min .content-section .separate {
-    display: none;
   }
 }
 
