--- a/css/style.scss
+++ b/css/style.scss
@@ -239,10 +239,11 @@ nav > ul > li > a:hover::after{
     p{
         width: 100%;
         height: 100%;
+        overflow: hidden;
 
         img{
             width: 100%;
-            height: 100%;
+            height: auto;
         }
     }
 }
@@ -336,7 +337,6 @@ nav > ul > li > a:hover::after{
 @media(max-width: 777.98px){
     .media-min{
         .content-section{
-            margin: 0 15px 0;
             h2{
                 font-size: 4rem;
             }
@@ -360,13 +360,29 @@ nav > ul > li > a:hover::after{
     }
 
     .media-min{
+        flex-wrap: wrap;
         .content-section{
+            margin: 20px;
             h2{
-                font-size: 4rem;
+                font-size: 2rem;
+                margin-bottom: 20px;
+            }
+            .separate{
+                display: none;
             }
         }
+        .short-media{
+            display: flex;
+            p:first-of-type{
+                margin: 10px;
+            }
+            
+            p:nth-of-type(2){
+                margin: 10px;
+            }
+    
+        }
     }
-
 
 }
 
@@ -392,17 +408,4 @@ nav > ul > li > a:hover::after{
         }
     }
 
-    .media-min{
-        flex-wrap: wrap;
-        .content-section{
-            margin: 20px;
-            h2{
-                font-size: 2rem;
-                margin-bottom: 20px;
-            }
-            .separate{
-                display: none;
-            }
-        }
-    }
 }
