--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,10 @@ nav > ul > li > a:hover::after {
 .content-section h1, .content-section h2 {
   font-size: var(--size-title);
 }
+.content-section h3 {
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
 .content-section span {
   display: block;
   margin: 3rem 0;
@@ -195,6 +199,9 @@ nav > ul > li > a:hover::after {
   font-size: var(--size-paragraph);
   line-height: 2rem;
   margin-top: 0;
+}
+.content-section p.citation {
+  font-size: 1rem;
 }
 .content-section p a:hover {
   color: var(--secondary-color);
@@ -212,6 +219,27 @@ nav > ul > li > a:hover::after {
 }
 .right span {
   transform: rotate(45deg);
+}
+
+.form {
+  width: 100%;
+  margin: 0;
+}
+.form input {
+  box-sizing: border-box;
+  opacity: 0.7;
+  height: 2rem;
+  border-radius: 5px;
+  padding: 3px;
+  margin-bottom: 10px;
+  border: none;
+}
+.form textarea {
+  opacity: 0.7;
+  border-radius: 5px;
+  border: none;
+  padding: 3px;
+  box-sizing: border-box;
 }
 
 .illustration-content {
