--- a/css/style.scss
+++ b/css/style.scss
@@ -189,6 +189,11 @@ nav > ul > li > a:hover::after{
         font-size: var(--size-title);
     }
 
+    h3{
+        font-size: 2rem;
+        margin-bottom: 3rem;
+    }
+
     span{
         display: block;
         margin: 3rem 0;
@@ -203,6 +208,9 @@ nav > ul > li > a:hover::after{
         font-size: var(--size-paragraph);
         line-height: 2rem;
         margin-top: 0;
+        &.citation{
+            font-size: 1rem;
+        }
 
         a:hover{
             color: var(--secondary-color);
@@ -225,6 +233,31 @@ nav > ul > li > a:hover::after{
 
     }
 }
+
+.form{
+    width: 100%;
+    margin: 0;
+
+    input{
+        box-sizing: border-box;
+        opacity: .7;
+        height: 2rem;
+        border-radius: 5px;
+        padding: 3px;
+        margin-bottom: 10px;
+        border: none;
+    }
+
+    textarea{
+        opacity: .7;
+        border-radius: 5px;
+        border: none;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+}
+
+
 
 // Illustration section
 .illustration-content{
