--- a/css/style.css
+++ b/css/style.css
@@ -163,15 +163,15 @@ nav > ul > li > a::after {
   content: "";
   position: absolute;
   bottom: -10px;
-  left: 200vh;
+  left: 150vh;
   width: 100%;
   height: 5px;
   background-color: var(--primary-color);
-  transition: transform 1s ease-in-out;
+  transition: transform 0.8s ease-in-out;
 }
 
 nav > ul > li > a:hover::after {
-  transform: translateX(-200vh);
+  transform: translateX(-150vh);
 }
 
 .short-media {
@@ -212,6 +212,14 @@ nav > ul > li > a:hover::after {
   transition: 0.5s;
 }
 
+.maps-content {
+  margin-right: 10%;
+  max-width: calc(50% - 10%);
+  position: relative;
+  z-index: -1;
+  height: 75vh;
+}
+
 .separate {
   margin: 20px 0;
 }
@@ -234,7 +242,7 @@ nav > ul > li > a:hover::after {
   opacity: 0.7;
   height: 2rem;
   border-radius: 5px;
-  padding: 3px;
+  padding: 3px 10px;
   margin-bottom: 10px;
   border: none;
 }
@@ -242,8 +250,23 @@ nav > ul > li > a:hover::after {
   opacity: 0.7;
   border-radius: 5px;
   border: none;
-  padding: 3px;
+  padding: 5px 10px;
   box-sizing: border-box;
+}
+.form input[type=submit] {
+  height: 45px;
+  background-color: var(--secondary-color);
+  padding: 13px 25px;
+  color: #28203f;
+  transition: 0.5s;
+  cursor: pointer;
+  opacity: 1;
+  font-family: "Conv_Bazar";
+  text-transform: uppercase;
+  font-size: var(--size-paragraph);
+}
+.form input[type=submit]:hover {
+  background-color: rgba(128, 222, 217, 0.747);
 }
 
 .illustration-content {
