--- a/css/style.scss
+++ b/css/style.scss
@@ -169,15 +169,15 @@ nav > ul > li > a::after{
     content: '';
     position: absolute;
     bottom: -10px;
-    left: 200vh;
+    left: 150vh;
     width: 100%;
     height: 5px;
     background-color: var(--primary-color);
-    transition: transform 1s ease-in-out;
+    transition: transform .8s ease-in-out;
 }
 
 nav > ul > li > a:hover::after{
-    transform: translateX(-200vh);
+    transform: translateX(-150vh);
 }
 
 .short-media{
@@ -223,6 +223,14 @@ nav > ul > li > a:hover::after{
     }
 }
 
+.maps-content{
+    margin-right: 10%;
+    max-width: calc(50% - 10%);
+    position: relative;
+    z-index: -1;
+    height: 75vh;
+}
+
 .separate{
     margin: 20px 0;
 }
@@ -247,7 +255,7 @@ nav > ul > li > a:hover::after{
         opacity: .7;
         height: 2rem;
         border-radius: 5px;
-        padding: 3px;
+        padding: 3px 10px;
         margin-bottom: 10px;
         border: none;
     }
@@ -256,12 +264,28 @@ nav > ul > li > a:hover::after{
         opacity: .7;
         border-radius: 5px;
         border: none;
-        padding: 3px;
+        padding: 5px 10px;
         box-sizing: border-box;
     }
+
+    input[type="submit"]{
+        height: 45px;
+        background-color: var(--secondary-color);
+        padding: 13px 25px;
+        color: #28203f;
+        transition: .5s;
+        cursor: pointer;
+        opacity: 1;
+        font-family: "Conv_Bazar";
+        text-transform: uppercase;
+        font-size: var(--size-paragraph);
+    }
+    
+    input[type="submit"]:hover{
+        background-color: rgba(128, 222, 217, 0.747);
+    }
+    
 }
-
-
 
 // Illustration section
 .illustration-content{
