--- a/css/style.scss
+++ b/css/style.scss
@@ -12,8 +12,8 @@
 :root{
     --primary-color: #FFF2F1;
     --secondary-color: #7CD1DE;
-    --size-paragraph: 1.3rem;
-    --size-title: 6rem;
+    --size-paragraph: 1.15rem;
+    --size-title: 4.5rem;
 }
 
 /* Generic class */
@@ -185,9 +185,9 @@ nav > ul > li > a:hover::after{
 }
 //  Content section
 .content-section{
-    margin-left: 10%;
+    margin-left: 5%;
     width: 100%;
-    max-width: calc(45% - 10%);
+    max-width: calc(50% - 6%);
 
     h1, h2{
         font-size: var(--size-title);
@@ -224,7 +224,7 @@ nav > ul > li > a:hover::after{
 }
 
 .maps-content{
-    margin-right: 10%;
+    margin-right: 5%;
     max-width: calc(50% - 10%);
     position: relative;
     z-index: -1;
@@ -236,7 +236,7 @@ nav > ul > li > a:hover::after{
 }
 
 .right{
-    margin-right: 10%;
+    margin-right: 5%;
     margin-left: 0;
     align-items: end;
     
@@ -281,16 +281,23 @@ nav > ul > li > a:hover::after{
         font-size: var(--size-paragraph);
     }
     
+    #hidden{
+        visibility: collapse;
+        font-size: 1rem;
+        color: lawngreen;
+    }
+
     input[type="submit"]:hover{
         background-color: rgba(128, 222, 217, 0.747);
     }
+
     
 }
 
 // Illustration section
 .illustration-content{
     display: block;
-    margin-right: 10%;
+    margin-right: 5%;
     width: 100%;
     max-width: calc(50% - 10%);
     position: relative;
@@ -383,7 +390,7 @@ nav > ul > li > a:hover::after{
 
 @media(max-width: 1199.98px){
     :root{
-        --size-title: 5rem;
+        --size-title: 4rem;
     }
     .content-section{
         margin-left: 5%;
