--- a/css/style.scss
+++ b/css/style.scss
@@ -198,8 +198,8 @@ section{
     }
 
     h3{
-        font-size: 2rem;
-        margin-bottom: 3rem;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
     }
 
     span{
@@ -404,12 +404,17 @@ section{
     .right{
         margin-right: 5%;
     }
+
+    #icon > img{
+        height: 150px;
+        width: auto;
+    }
+
 }
 
 @media(max-width: 991.98px){
-    #icon > img{
-        height: 120px;
-        width: auto;
+    #icon{
+    display: none;
     }
 }
 
@@ -438,6 +443,10 @@ section{
         display: none;
     }
 
+    .btn.cv{
+        margin-top: 15px;
+    }
+
     .media-min{
         flex-wrap: wrap;
         .content-section{
@@ -463,9 +472,10 @@ section{
         }
     }
 
-    #icon, .maps-content{
+    .maps-content{
         display: none;
     }
+
 
 }
 
@@ -493,6 +503,10 @@ section{
 
     .content-section p{
         line-height: 1.5rem;
+    }
+
+    h3{
+        margin-top: 0;
     }
 
 }
