--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,18 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Conv_renner-medium";
+  src: url("fonts/renner-medium.eot");
+  src: local("☺"), url("../fonts/renner-medium.woff") format("woff"), url("../fonts/renner-medium.ttf") format("truetype"), url("../fonts/renner-medium.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 /* Variable */
 :root {
   --primary-color: #FFF2F1;
   --secondary-color: #7CD1DE;
-  --size-paragraph: 1.15rem;
+  --size-paragraph: 1.3rem;
   --size-title: 4.5rem;
 }
 
@@ -48,6 +55,10 @@ body {
   color: var(--primary-color);
   width: 100vw;
   box-sizing: border-box;
+  font-family: "Conv_renner-medium";
+}
+
+h1, h2, h3 {
   font-family: "Conv_Bazar";
   text-transform: uppercase;
 }
@@ -151,6 +162,7 @@ nav > ul {
 }
 
 nav > ul > li {
+  font-family: "Conv_Bazar";
   font-size: 5.5rem;
   line-height: 1.7;
 }
@@ -163,7 +175,7 @@ nav > ul > li > a::after {
   content: "";
   position: absolute;
   bottom: -10px;
-  left: 150vh;
+  left: 200vh;
   width: 100%;
   height: 5px;
   background-color: var(--primary-color);
@@ -171,7 +183,7 @@ nav > ul > li > a::after {
 }
 
 nav > ul > li > a:hover::after {
-  transform: translateX(-150vh);
+  transform: translateX(-200vh);
 }
 
 .short-media {
