--- a/css/style.css
+++ b/css/style.css
@@ -231,9 +231,10 @@ section {
 .maps-content {
   margin-right: 5%;
   max-width: calc(50% - 10%);
-  position: relative;
-  z-index: -1;
   height: 75vh;
+}
+.maps-content iframe {
+  box-shadow: 0 80px 140px -40px rgba(0, 0, 0, 0.6);
 }
 
 .separate {
@@ -307,6 +308,7 @@ section {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  box-shadow: 0 80px 140px -40px rgba(0, 0, 0, 0.6);
 }
 .illustration-content p img {
   width: 100%;
