--- a/css/style.css
+++ b/css/style.css
@@ -308,11 +308,10 @@ section {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  box-shadow: 0 80px 140px -40px rgba(0, 0, 0, 0.6);
 }
 .illustration-content p img {
-  width: 100%;
-  height: auto;
+  height: 100%;
+  width: auto;
 }
 
 .btn {
@@ -370,6 +369,50 @@ section {
     transform: rotate(360deg) scale(0.95) translate3d(0, 10px, 0);
   }
 }
+@keyframes scroll {
+  0% {
+    transform: translateX(1008px);
+  }
+  100% {
+    transform: translateX(calc(-168px * 9));
+  }
+}
+.slider {
+  height: min-content;
+  margin: 50px auto;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+.slider::before, .slider::after {
+  content: "";
+  height: 100px;
+  position: absolute;
+  width: 6vw;
+  max-width: 200px;
+  z-index: 2;
+}
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+.slider::before {
+  left: 0;
+  top: 0;
+}
+.slider .wrap {
+  animation: scroll 10s linear infinite;
+  display: flex;
+  align-items: center;
+  width: min-content;
+}
+.slider .wrap-content {
+  width: min-content;
+  max-height: min-content;
+  margin: 0 20px;
+}
+
 @media (max-width: 1199.98px) {
   :root {
     --size-title: 4rem;
@@ -378,6 +421,9 @@ section {
   .content-section {
     margin-left: 5%;
     max-width: calc(50% - 10%);
+  }
+  .content-section p {
+    line-height: 1.5rem;
   }
 
   .right {
@@ -390,7 +436,7 @@ section {
   }
 }
 @media (max-width: 991.98px) {
-  #icon {
+  .slider, #icon {
     display: none;
   }
 }
