--- a/css/style.scss
+++ b/css/style.scss
@@ -333,10 +333,9 @@ section{
         width: 100%;
         height: 100%;
         overflow: hidden;
-        box-shadow: 0 80px 140px -40px rgba(0, 0, 0, 0.6);
         img{
-            width: 100%;
-            height: auto;
+            height: 100%;
+            width: auto;
         }
     }
 }
@@ -413,6 +412,59 @@ section{
     }
 }
 
+//SLIDER LOGOS
+$animationSpeed: 10s;
+
+// Animation
+@keyframes scroll {
+	0% { transform: translateX(168px * 6); }
+	100% { transform: translateX(calc(-168px * 9))}
+}
+
+
+// Styling
+.slider {
+	height: min-content;
+	margin: 50px auto;
+	overflow:hidden;
+	position: relative;
+	width: 100%;
+	
+	&::before,
+	&::after {
+		content: "";
+		height: 100px;
+		position: absolute;
+		width: 6vw;
+		max-width: 200px;
+		z-index: 2;
+	}
+	
+	&::after {
+		right: 0;
+		top: 0;
+		transform: rotateZ(180deg);
+	}
+
+	&::before {
+		left: 0;
+		top: 0;
+	}
+	
+	.wrap {
+		animation: scroll $animationSpeed linear infinite;
+		display: flex;
+		align-items: center;
+		width: min-content;
+	}
+	
+	.wrap-content {
+		width: min-content;
+        max-height: min-content;
+        margin: 0 20px;
+	}
+}
+
 @media(max-width: 1199.98px){
     :root{
         --size-title: 4rem;
@@ -420,6 +472,10 @@ section{
     .content-section{
         margin-left: 5%;
         max-width: calc(50% - 10%);
+
+        p{
+            line-height: 1.5rem;
+        }
     }
 
     .right{
@@ -434,7 +490,7 @@ section{
 }
 
 @media(max-width: 991.98px){
-    #icon{
+    .slider, #icon{
     display: none;
     }
 }
