--- a/css/style.scss
+++ b/css/style.scss
@@ -417,7 +417,7 @@ $animationSpeed: 10s;
 
 // Animation
 @keyframes scroll {
-	0% { transform: translateX(168px * 6); }
+	0% { transform: translateX(calc(168px * 6)); }
 	100% { transform: translateX(calc(-168px * 9))}
 }
 
