--- a/css/style.css
+++ b/css/style.css
@@ -220,12 +220,17 @@ section {
   line-height: 2rem;
   margin-top: 0;
 }
-.content-section p.citation {
-  font-size: 1rem;
-}
 .content-section p a:hover {
   color: var(--secondary-color);
   transition: 0.5s;
+}
+.content-section .list-icon {
+  padding-left: 5%;
+  list-style-image: url("../media/icon-list.png");
+  list-style-position: inside;
+}
+.content-section .list-icon li {
+  font-size: var(--size-paragraph);
 }
 
 .maps-content {
@@ -259,22 +264,27 @@ section {
   opacity: 0.7;
   height: 2rem;
   border-radius: 5px;
-  padding: 3px 10px;
-  margin-bottom: 10px;
+  padding: 0 10px;
+  margin-bottom: 5px;
   border: none;
+  height: 50px;
+  font-size: var(--size-paragraph);
 }
 .form input::placeholder, .form textarea::placeholder {
   font-family: "Conv_renner-medium";
-  font-size: 0.8rem;
+  font-size: var(--size-paragraph);
 }
 .form textarea {
   opacity: 0.7;
   border-radius: 5px;
   border: none;
-  padding: 5px 10px;
+  padding: 15px 10px;
   box-sizing: border-box;
+  margin-bottom: 5px;
+  font-size: var(--size-paragraph);
 }
 .form input[type=submit] {
+  margin: 15px 0 0;
   height: 45px;
   background-color: var(--secondary-color);
   padding: 13px 25px;
@@ -402,7 +412,7 @@ section {
   top: 0;
 }
 .slider .wrap {
-  animation: scroll 10s linear infinite;
+  animation: scroll 30s linear infinite;
   display: flex;
   align-items: center;
   width: min-content;
@@ -437,6 +447,37 @@ section {
 }
 @media (max-width: 991.98px) {
   .slider, #icon {
+    display: none;
+  }
+
+  #project .content-section {
+    max-width: 100%;
+    margin: 0 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  #project .content-section .list-icon {
+    text-align: left;
+  }
+
+  #project .illustration-content {
+    display: none;
+  }
+
+  #contact .content-section {
+    max-width: 100%;
+    margin: 0 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .maps-content {
     display: none;
   }
 }
@@ -485,10 +526,6 @@ section {
   }
   .media-min .short-media p:nth-of-type(2) {
     margin: 10px;
-  }
-
-  .maps-content {
-    display: none;
   }
 }
 @media (max-width: 575.98px) {
